# sxt-proof-of-sql

./: .gitignore  .gitignore_additions  .releaserc.json  Cargo.toml  DELIVERY.md  Makefile  README.md  SECURITY.md  SECURITY_MAINTENANCE.md  SPEC.md  fail_output.txt  flake.nix  package.json  test_output.txt
crates/evm-verifier-integration-tests/: Cargo.toml
crates/evm-verifier-integration-tests/src/: error.rs  evm_tests.rs  exprs.rs  lib.rs  plans.rs  proof_plan.rs  tests.rs
crates/powers-of-tau-util/: Cargo.toml
crates/powers-of-tau-util/src/: main.rs
crates/proof-of-sql/: Cargo.toml  Cargo_additions.toml  README.md
crates/proof-of-sql-parser/: Cargo.toml
crates/proof-of-sql-parser/src/: sqlparser.rs
crates/proof-of-sql-parser/src/posql_time/: unit.rs
crates/proof-of-sql-planner/: Cargo.toml
crates/proof-of-sql-planner-wasm/: Cargo.toml  README.md
crates/proof-of-sql-planner-wasm/src/: diagnostic.rs  input.rs  lib.rs  validation.rs
crates/proof-of-sql-planner-wasm/tests/: validation.rs
crates/proof-of-sql-planner/examples/albums/: main.rs
crates/proof-of-sql-planner/examples/avocado-prices/: main.rs
crates/proof-of-sql-planner/examples/books/: main.rs
crates/proof-of-sql-planner/examples/brands/: main.rs
crates/proof-of-sql-planner/examples/census/: main.rs
crates/proof-of-sql-planner/examples/countries/: main.rs
crates/proof-of-sql-planner/examples/dinosaurs/: main.rs
crates/proof-of-sql-planner/examples/dog_breeds/: main.rs
crates/proof-of-sql-planner/examples/hello_world/: main.rs
crates/proof-of-sql-planner/examples/plastics/: main.rs
crates/proof-of-sql-planner/examples/posql_db/: commit_accessor.rs  csv_accessor.rs  main.rs  record_batch_accessor.rs  run_example.sh
crates/proof-of-sql-planner/examples/programming_books/: main.rs
crates/proof-of-sql-planner/examples/rockets/: main.rs
crates/proof-of-sql-planner/examples/space/: main.rs
crates/proof-of-sql-planner/examples/stocks/: main.rs
crates/proof-of-sql-planner/examples/sushi/: main.rs
crates/proof-of-sql-planner/examples/tech_gadget_prices/: main.rs
crates/proof-of-sql-planner/examples/vehicles/: main.rs
crates/proof-of-sql-planner/examples/wood_types/: main.rs
crates/proof-of-sql-planner/src/: aggregate.rs  config.rs  context.rs  conversion.rs  df_util.rs  error.rs  expr.rs  lib.rs  plan.rs  proof_plan_with_postprocessing.rs  uppercase_column_visitor.rs  util.rs
crates/proof-of-sql-planner/src/postprocessing/: expression_evaluation.rs  expression_evaluation_test.rs
crates/proof-of-sql-planner/tests/: case_when_matrix_tests.rs  e2e_tests.rs  evm_tests.rs
crates/proof-of-sql/examples/: test_setup_migration.rs
crates/proof-of-sql/examples/nullable_columns/: Cargo.toml  main.rs
crates/proof-of-sql/src/: scalar.rs
crates/proof-of-sql/src/base/: map.rs  map_test.rs  mod.rs  mod_test.rs  rayon_cfg.rs  rayon_cfg_test.rs  ref_into.rs  ref_into_test.rs  serialize.rs  serialize_test.rs
crates/proof-of-sql/src/base/arrow/: arrow_array_to_column_conversion.rs  arrow_array_to_column_conversion_error_test.rs  column_arrow_conversions.rs  column_arrow_conversions_test.rs  mod.rs  mod_test.rs  nullable_conversion.rs  owned_and_arrow_conversions.rs  owned_and_arrow_conversions_test.rs  owned_arrow_conversion_error_test.rs  record_batch_conversion.rs  record_batch_conversion_test.rs  record_batch_error_test.rs  record_batch_errors.rs  record_batch_errors_test.rs  scalar_and_i256_conversions.rs  scalar_and_i256_conversions_test.rs
crates/proof-of-sql/src/base/bit/: bit_distribution.rs  bit_distribution_test.rs  bit_mask_utils.rs  bit_mask_utils_test.rs  bit_matrix.rs  bit_matrix_test.rs  mod.rs  mod_test.rs
crates/proof-of-sql/src/base/byte/: byte_distribution.rs  byte_distribution_test.rs  byte_matrix_utils.rs  byte_matrix_utils_test.rs  mod.rs  mod_test.rs
crates/proof-of-sql/src/base/commitment/: bounds_error_test.rs  column_bounds.rs  column_bounds_test.rs  column_commitment_metadata.rs  column_commitment_metadata_error_test.rs  column_commitment_metadata_map.rs  column_commitment_metadata_map_test.rs  column_commitment_metadata_test.rs  column_commitments.rs  column_commitments_mismatch_test.rs  column_commitments_test.rs  commitment_error_test.rs  commitment_evaluation_proof.rs  commitment_evaluation_proof_test.rs  commitment_evaluation_proof_tests.rs  committable_column.rs  committable_column_test.rs  mod.rs  mod_test.rs  naive_commitment.rs  naive_commitment_test.rs  naive_evaluation_proof.rs  naive_evaluation_proof_test.rs  query_commitments.rs  query_commitments_test.rs  table_commitment.rs  table_commitment_error_test.rs  table_commitment_test.rs  vec_commitment_ext.rs  vec_commitment_ext_test.rs
crates/proof-of-sql/src/base/database/: accessor.rs  accessor_test.rs  arrow_schema_utility.rs  arrow_schema_utility_test.rs  column.rs  column_arithmetic_operation.rs  column_field.rs  (+85 more)
crates/proof-of-sql/src/proof_primitive/: mod.rs  mod_test.rs
crates/proof-of-sql/src/sql/: error.rs  error_test.rs  mod.rs  mod_test.rs  scale.rs  scale_test.rs
crates/proof-of-sql/src/utils/: log.rs  log_test.rs  mod.rs  mod_test.rs  parse.rs  parse_test.rs
crates/proof-of-sql/tests/: commitment_utility.rs  utils_binaries.rs
crates/proof-of-sql/utils/commitment-utility/: main.rs
crates/proof-of-sql/utils/generate-parameters/: main.rs  round_trip_test.rs
proof-of-sql/: .gitignore  Cargo.toml  DELIVERY.md  Makefile  lib.rs
proof-of-sql/proof_primitive/: mod.rs
proof-of-sql/proof_primitive/dory/: dory_commitment_evaluation_proof.rs  dory_commitment_evaluation_proof_test.rs  dynamic_dory_commitment_evaluation_proof.rs  dynamic_dory_commitment_evaluation_proof_test.rs  mod.rs  setup_test.rs
proof-of-sql/sql/: mod.rs
proof-of-sql/sql/proof_exprs/: inequality_expr.rs  inequality_expr_test.rs  mod.rs
proof-of-sql/sql/proof_plans/: mod.rs  sort_merge_join_exec.rs  sort_merge_join_exec_test.rs
proof-of-sql/src/proof_primitive/dory/: mod.rs  setup_cache.rs
proof-of-sql/tests/: dory_setup_cache.rs  mod.rs
proof-of-sql/tests/common/: dory_setup_cache.rs
(+778 files in other folders)
