[package]
publish = true
name = "proof-of-sql-parser"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
build = "build.rs"
description = "Library for SQL parsing for the Proof of SQL execution engine."
license = "MIT" # Replace license-file with license, or specify license-file explicitly
# Remove exclude if not needed, or specify explicitly: exclude = ["some/path"]

[lib]
# Remove doctest and test as they are enabled by default

[dependencies]
arrayvec = { workspace = true, features = ["serde"] }
bigdecimal = { workspace = true, default-features = false }
chrono = { workspace = true, features = ["serde"] }
lalrpop-util = { workspace = true, features = ["lexer", "unicode"] }
serde = { workspace = true, features = ["derive", "alloc"] }
snafu = { workspace = true }
sqlparser = { workspace = true, default-features = false }

[build-dependencies]
lalrpop = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
