[package]
publish = true
name = "proof-of-sql-planner"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "SQL query planner for proof-of-sql."
exclude = { workspace = true }
license-file = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = { workspace = true }
arrow = { workspace = true }
datafusion = { workspace = true }
# getrandom and uuid must be compiled with js feature
getrandom = { workspace = true, features = ["js"] }
indexmap = { workspace = true }
proof-of-sql = { workspace = true, features = ["arrow"] }
serde = { workspace = true }
snafu = { workspace = true }
sqlparser = { workspace = true }
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
bincode = { workspace = true }
bumpalo = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
proof-of-sql = { workspace = true, features = ["arrow", "hyperkzg_proof"] }

[lints]
workspace = true
